@@ -18,6 +18,10 @@ Changes with Apache 2.4.26
   *) mod_http2: obsoleted option H2SessionExtraFiles, will be ignored and
      just log a warning. [Stefan Eissing]
      
+  *) mod_autoindex: Add IndexOptions UseOldDateFormat to allow the date
+     format from 2.2 in the Last Modified column. PR60846.
+     [Hank Ibell <hwibell gmail.com>]
+
   *) mod_http2: fixed PR60869 by making h2 workers exit explicitly waking up
      all threads to exit in a defined way. [Stefan Eissing]
      
